--- a/suggestions.html
+++ b/suggestions.html
@@ -22,7 +22,18 @@
 
 <a href="https://www.instagram.com/smallgirlbigbites/" target="_blank"> SmallGirlBigBites Instagram</a>
 
-</center>
 
+
+<h2>Suggestions On a New Place I Should Check Out</h2>
+<h3>Tell us Below!</h3>
+
+<form>
+<label for="message">Message</label>
+<textarea id="message" name="message" rows="10"></textarea>
+<input type="submit" value="send">
+
+  </form>
+
+</center>
 </body>
 </html>
