add 1st recipe and suggetions

--- a/recipes.html
+++ b/recipes.html
@@ -4,12 +4,15 @@
   <title>TheGoodBite</title>
 </head>
 <body>
-<h1><center>The Good Bite</center></h1>
-<h3><center>A Food Blog Run by Smallgirlbigbites</center></h3>
-
-<!-- links -->
 <center>
 
+<h1>The Good Bite</h1>
+<h3>A Food Blog Run by Smallgirlbigbites</h3>
+<h2>Recipe Page</h2>
+
+</center>
+<!-- links -->
+<center>
 <a href="index.html">Home </a>
 
 <a href="gallery.html"> Gallery </a>
@@ -21,8 +24,30 @@
 <a href="suggestions.html">Suggestions </a>
 
 <a href="https://www.instagram.com/smallgirlbigbites/" target="_blank"> SmallGirlBigBites Instagram</a>
-
 </center>
+
+
+<p><h4>Protein Pancakes</h4></p>
+<p>Ingredients</p>
+<ul>
+  <li>1 Banana</li>
+  <li>1 tsp coconut flour</li>
+  <li>1 scoop of vanilla protein powder</li>
+  <li>2/3 cup of egg whites</li>
+  <li>Mini Chocolate Chips (optional)</li>
+</ul>
+<p>Directions</p>
+<ol>
+  <li>Cut banana in half and place one half aside</li>
+  <li>Put the following ingredients in blender: 1/2 banana, coconut flour, egg whites, & protein powder</li>
+  <li>Blend up</li>
+  <li>Heat up pan and once warm, pour first pancake</li>
+  <li>While it cooks, cut other half of banana into slices to place in pancake</li>
+  <li>place bananas and chocolate chips onto pancake while cooking</li>
+  <li>cook for about 1-2 minutes on each side on medium/low</li>
+  <li>repeat & enjoy</li>
+</ol>
+
 
 </body>
 </html>
