--- a/suggestions.html
+++ b/suggestions.html
@@ -4,7 +4,7 @@
   <title>TheGoodBite</title>
 </head>
 <body>
-<h1><center>The Good Bite</center></h1>
+<h1><center>Welcome To The Good Bite</center></h1>
 <h3><center>A Food Blog Run by Smallgirlbigbites</center></h3>
 
 <!-- links -->
