add headers and css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>TheGoodBite</title>
-</head>
+  <head>
+  <title>SmallGirl BigBites</title>
+  <link rel="stylesheet.css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"> 
+  <link rel="stylesheet" href="css/stylesheet.css">
+ <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+ </head>
 <body>
-<h1><center>The Good Bite</center></h1>
-<h3><center>A Food Blog Run by Smallgirlbigbites</center></h3>
+
+    <div id="banner"> <img src="pictures/smallgirlbigbitesheader.jpg">
+    </div>
+
 
 
 <!-- links -->
@@ -14,17 +19,27 @@
 
 <a href="index.html">Home </a>
 
-<a href="gallery.html"> Gallery </a>
-
-<a href="Recipes.html">Recipies </a>
+<a href="Recipes.html">Recipes </a>
 
 <a href="Reviews.html"> Reviews </a>
 
 <a href="suggestions.html">Suggestions </a>
 
-<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank"> SmallGirlBigBites Instagram</a>
+<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank">Instagram</a>
 
-</center>
+
+<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  
+
+</p>
+
+
+</center> <!-- FROM UP BEFORE LINKS -->
 
 </body>
 </html>
