--- a/recipes.html
+++ b/recipes.html
@@ -1,29 +1,31 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>TheGoodBite</title>
-</head>
-<body>
-<center>
+  <head>
+  <title>SmallGirl BigBites</title>
+  <link rel="stylesheet.css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"> 
+  <link rel="stylesheet" href="css/stylesheet.css">
+ <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+ </head>
+ <body>
+ 
+   <div id="banner"> <img src="pictures/recipesSGBB.jpg">
+    </div>
 
-<h1>The Good Bite</h1>
-<h3>A Food Blog Run by Smallgirlbigbites</h3>
-<h2>Recipe Page</h2>
 
 </center>
 <!-- links -->
 <center>
+
 <a href="index.html">Home </a>
 
-<a href="gallery.html"> Gallery </a>
-
-<a href="Recipes.html">Recipies </a>
+<a href="Recipes.html">Recipes </a>
 
 <a href="Reviews.html"> Reviews </a>
 
 <a href="suggestions.html">Suggestions </a>
 
-<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank"> SmallGirlBigBites Instagram</a>
+<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank">Instagram</a>
+
 </center>
 
 
