--- a/suggestions.html
+++ b/suggestions.html
@@ -1,26 +1,28 @@
-<!doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>TheGoodBite</title>
-</head>
+  <head>
+  <title>SmallGirl BigBites</title>
+  <link rel="stylesheet.css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"> 
+  <link rel="stylesheet" href="css/stylesheet.css">
+ <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+ </head>
 <body>
-<h1><center>Welcome To The Good Bite</center></h1>
-<h3><center>A Food Blog Run by Smallgirlbigbites</center></h3>
+
+    <div id="banner"> <img src="pictures/suggestionsSGBB.jpg">
+    </div>
 
 <!-- links -->
 <center>
 
 <a href="index.html">Home </a>
 
-<a href="gallery.html"> Gallery </a>
-
-<a href="Recipes.html">Recipies </a>
+<a href="Recipes.html">Recipes </a>
 
 <a href="Reviews.html"> Reviews </a>
 
 <a href="suggestions.html">Suggestions </a>
 
-<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank"> SmallGirlBigBites Instagram</a>
+<a href="https://www.instagram.com/smallgirlbigbites/" target="_blank">Instagram</a>
 
 
 
@@ -34,6 +36,6 @@
 
   </form>
 
-</center>
+</center> <!-- FROM BEFORE LINKS-->
 </body>
 </html>
