--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <a href="index.html">Home </a>
 
-<a href="Recipes.html">Recipes </a>
+<a href="recipes.html">Recipes </a>
 
 <a href="Reviews.html"> Reviews </a>
 
